# tender-screenshot-agent

./: .env.example  .gitignore  .gitkeep  LICENSE  README.md  SOURCE_BUNDLE_NOTICE.md  package.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: agent-host.ts  main.tsx  style.css  wecom-panel.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  README.txt
apps/desktop/src-tauri/src/: lib.rs  main.rs
config/: platforms.example.json  providers.example.json
docs/: .cleanup-needed  .create-file-confirmed  .final-import-pending  .import-note  .import-will-replace-this  .mechanism-check  .repository-write-confirmed  .source-import-status  .source-status  .tree-content-probe  .upload-progress  .write-test  ADAPTER_EXPLORATION_DRIVERS.md  CI_CHECK.md  CI_WECOM_RUNTIME_CHECK.md  LOCAL_SECURITY_CONFIG.md  MODEL_SECURITY_PROFILE.md  PI_AGENT_RUNTIME.md  PLATFORM_ADAPTER_RECORDING.md  QWEBBRIDGE_EXPLORER.md  SECURITY.md  VERIFICATION_STATUS.md  WECOM_BOT.md
scripts/: run-local-config.mjs  secret-scan.mjs
source-bundle/: part000.b64
